--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,9 @@ Presentation/
 .ipynb_checkpoints/
 # Data files
 /data/
-# Except for the metadata file
-!/data/metadata/GeoTIFF_1m_metadata_processed.csv
+# Except for the metadata folder
+!/data/metadata/
+
+/utils/__pycache__/
+/proj/
+/.git/
