--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ Presentation/
 # Data files
 data/*
 # Except for the metadata folder
-!data/metadata/
+!data/metadata/GeoTIFF_1m_metadata_processed.csv
 # Pycharm related folder
 utils/__pycache__/
 proj/
