--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-# Files in the Presentation folder
+# Files in the presentation folder
 Presentation/
 # Jupyter Notebook backup files
 .ipynb_checkpoints/
 # Data files
 data/*
 # Except for the metadata folder
-!data/metadata/GeoTIFF_1m_metadata_processed.csv
-# Pycharm related folder
-utils/__pycache__/
-proj/
-# .git file
-.git/
+!data/metadata/*
